# Book-Data_Voyage

./: BOOK_STATUS.md  IMPROVEMENTS_SUMMARY.md  LICENSE  PROJECT_OVERVIEW.md  PROJECT_STRUCTURE.md  QUALITY_ASSURANCE.md  QUICK_START.md  README.md  REAL_DATA_SOURCES.md  requirements.txt  update_markdown_images.py  update_markdown_images_v2.py  update_summary_images.py
book/: ACKNOWLEDGEMENTS.md  DEDICATION.md  FOREWORD.md  PREFACE.md  PROLOGUE.md  README.md
book/ch01/: CHAPTER1_SUMMARY.md  README.md  ch01_data_science_landscape.py  ch01_demo.py
book/ch02/: CHAPTER2_SUMMARY.md  README.md  ch02_practical_examples.py  ch02_python_fundamentals.py
book/ch03/: CHAPTER3_SUMMARY.md  README.md  ch03_mathematics_statistics.py  ch03_practical_examples.py
book/ch04/: CHAPTER4_SUMMARY.md  README.md  ch04_data_types_sources.py
book/ch05/: CHAPTER5_SUMMARY.md  README.md  ch05_data_collection_storage.py  data_collection.db  data_warehouse.db
book/ch05/collected_data/: api_data.json  covid_data.json  sensor_data.csv  weather_data.json
book/ch05/transformed_data/: sensor_aggregated.csv  transformed_products.csv  transformed_sensor.csv  transformed_users.csv
book/ch06/: CHAPTER6_SUMMARY.md  README.md  ch06_data_cleaning_preprocessing.py
book/ch07/: CHAPTER7_SUMMARY.md  README.md  ch07_exploratory_data_analysis.py
book/ch08/: CHAPTER8_SUMMARY.md  README.md  ch08_statistical_inference_hypothesis_testing.py
book/ch09/: CHAPTER9_SUMMARY.md  README.md  ch09_machine_learning_fundamentals.py
book/ch10/: CHAPTER10_SUMMARY.md  README.md  ch10_feature_engineering_selection.py
book/ch11/: CHAPTER11_SUMMARY.md  README.md  ch11_unsupervised_learning.py
book/ch12/: CHAPTER12_SUMMARY.md  README.md  ch12_deep_learning_fundamentals.py
book/ch13/: CHAPTER13_SUMMARY.md  README.md  ch13_natural_language_processing.py
book/ch14/: CHAPTER14_SUMMARY.md  README.md  ch14_computer_vision_fundamentals.py
book/ch15/: CHAPTER15_SUMMARY.md  README.md  ch15_time_series_analysis.py
book/ch16/: CHAPTER16_SUMMARY.md  README.md  ch16_big_data_processing.py
book/ch17/: CHAPTER17_SUMMARY.md  README.md  ch17_advanced_machine_learning.py
book/ch18/: CHAPTER18_SUMMARY.md  README.md  ch18_model_deployment_mlops.py
book/ch19/: CHAPTER19_SUMMARY.md  README.md  ch19_real_world_case_studies.py
book/ch20/: CHAPTER20_SUMMARY.md  README.md  ch20_data_science_ethics.py
book/ch21/: CHAPTER21_SUMMARY.md  README.md  ch21_communication_storytelling.py
book/ch22/: CHAPTER22_SUMMARY.md  README.md  ch22_portfolio_development.py
book/ch23/: CHAPTER23_SUMMARY.md  README.md  ch23_career_development.py
book/ch24/: CHAPTER24_SUMMARY.md  README.md  ch24_advanced_career_specializations.py
book/ch25/: .gitignore  CHANGELOG.md  CHAPTER25_SUMMARY.md  MANIFEST.in  README.md  build_and_publish.py  ch25_python_library_development.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
book/ch25/.github/workflows/: publish.yml
book/ch25/datascience_toolkit/: __init__.py
book/ch26/: README.md
book/ch27/: README.md
case_studies/: README.md
case_studies/customer_segmentation/: README.md
exercises/: README.md
scripts/: README.md  update_all_images.py  update_images.py  update_markdown_images_v2.py  update_summary_images.py
tools/: README.md
